# vscode-dpdk-samples

Pktgen-DPDK/: build.out
Pktgen-DPDK/cmake/: CMakeLists.txt
Pktgen-DPDK/tools/: pktgen-build.sh
l2fwd/: CMakeLists.txt
l2fwd-cpp/: CMakeLists.txt  main.cpp
trex/trex-core/cmake/: CMakeLists.txt  workspace.code-workspace
